# jetblack-finance

./: README.md  mypy.ini  pyproject.toml
jetblack_finance/db/builder/: books.py  cash.py  counterparties.py  create.py  create_sqlalchemy.py  currencies.py  equities.py  instrument_types.py  instruments.py  positions.py  schema.py  trades.py
jetblack_finance/db/data/: books.json  cash.json  counterparties.json  currencies.json  equities.json  instrument_types.json
jetblack_finance/db/pnl/: blotter.py  trade.py
jetblack_finance/entrypoints/: create_database.py
jetblack_finance/order_book/: __init__.py  abstract_types.py  aggregate_order_side.py  exchange_order_book.py  order_book.py  order_book_manager.py
jetblack_finance/order_book/plugins/: fill_or_kill.py
jetblack_finance/pnl/: __init__.py  algorithm.py  iorder.py  isecurity.py  itrade.py  matched_trade.py  order_pnl.py  order_pnl2.py  partial_trade.py  pnl_implementations.py  pnl_state.py  pnl_strip.py  scaled_order.py  scaled_trade.py  split_trade.py  symbol_pnl.py  trade.py  trade_pnl_strip.py  trade_state.py  trading_pnl.py  types.py
jetblack_finance/pnl/impl/: db.py  simple.py
jetblack_finance/trading_pnl/: README.md  __init__.py  algorithm.py  pnl_strip.py  types.py
scratch/: db_example.py  example1.sql  mysql_example.py  sqlite_example.py
tests/order_book/: test_amend_size.py  test_book_or_cancel.py  test_cancel.py  test_cross.py  test_fill_or_kill.py  test_format.py  test_immediate_or_cancel.py  test_order_book.py  test_partial_fill.py  test_stop.py  test_time_priority.py
tests/pnl/: test_order_pnl.py  test_order_pnl2.py  test_scaled_order.py  test_split_order.py  test_split_trade.py  test_trade_pnl.py  test_trading_pnl.py  utils.py
tests/trading_pnl/: test_trade_pnl.py
(+26 files in other folders)
