[tool.poetry]
name = "jetblack-finance"
version = "0.1.0"
description = "Some example code"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
readme = "README.md"
packages = [
    { include = "jetblack_finance" },
]
repository = "https://github.com/rob-blackbourn/jetblack-finance"

[tool.poetry.dependencies]
python = "^3.8"
mariadb = "^1.1.10"

[tool.poetry.dev-dependencies]
pytest = "^7.3"
pylint = "^2.17"
mypy = "^1.3"
autopep8 = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
