[tool.poetry]
name = "jetblack-finance"
version = "0.1.0"
description = "Some example code"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
readme = "README.md"
packages = [
    { include = "jetblack_finance" },
]
repository = "https://github.com/rob-blackbourn/jetblack-finance"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^8.3"
pylint = "^3.1"
mypy = "^1.13"
autopep8 = "^2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
